--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Ziggulnugulee
-subtitle: "늙은 7살" 너구리 블로그"
-email: das1218@gmail.com
-name: nugulee chung
+title: "Ziggulnugulee"
+subtitle: "늙은 7살 너구리 블로그"
+email: "das1218@gmail.com"
+name: "nugulee chung"
 description: >
- 너구리 블로그입니다
+  "너구리 블로그입니다"
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
