--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: "Ziggulnugulee"
+title: "Nugulee"
 subtitle: "늙은 7살 너구리 블로그"
 email: "das1218@gmail.com"
 name: "nugulee chung"
