--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "늙은 7살 너구리 블로그"
 email: "das1218@gmail.com"
 name: "nugulee chung"
 description: >
-  "너구리 블로그입니다"
+  너구리 블로그입니다
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -78,29 +78,29 @@ descriptions:
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
+    username:
+    url:
     desc: Follow me on Twitter
     share: true
 
   - name: Facebook
     icon: facebook
-    username: thebencentra
-    url: ""
+    username:
+    url:
     desc: Friend me on Facebook
     share: true
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username:
+    url:
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username:
+    url:
     desc: Connect with me on LinkedIn
     share: true
 
@@ -199,6 +199,6 @@ protocols:
 
   twitter_image: "/assets/logo.png"
 
-  os_repo: "https://github.com/bencentra/centrarium.com"
+  os_repo: ""
   os_rcs_type: "git"
   os_src: "git@github.com:bencentra/centrarium.com.git"
